Agregué el json

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 </head>
 <body>
     <section class="container-fliud">
+    
+    <!-- Selecciona un juego -->
         <div class="container-fluid">
             <div class="row">
                 <h3>Selecciona un juego.</h3>
             </div>
         </div>
+
         <!-- Cards -->
         <div class="container-fliud">
             <div class="row">
