--- a/index.html
+++ b/index.html
@@ -7,44 +7,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <section class="container-fliud">
+    <section class="container-fluid">
+    
+    <!-- Img Fondo Index  -->
+    <div class="container-fluid no-gutters">
+        <div class="row">
+            <div class="img-fondo-index no-gutters">
+            </div>
+        </div>
+    </div>
     
     <!-- Selecciona un juego -->
-        <div class="container-fluid">
-            <div class="row">
-                <h3>Selecciona un juego.</h3>
+        <div class="container-fluid no-gutters">
+            <div class="row titulo-index">
+                <p>Selecciona un juego</p>
             </div>
         </div>
 
         <!-- Cards -->
-        <div class="container-fliud">
+        <div class="container-fluid no-gutters">
             <div class="row">
                 <div class="card-deck">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
+                        <a href="./views/csgo.html"><img src="./img/img-index/csgo.png" class="card-img-top" alt="..."></a>
                     </div>
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    </div>
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
+                        <a href="./views/lol.html"><img src="./img/img-index/lol.jpg" class="card-img-top" alt="..."></a>
                     </div>
                 </div>
             </div>
