Cambios en el index

--- a/index.html
+++ b/index.html
@@ -30,12 +30,24 @@
         <!-- Cards -->
         <div class="container-fluid no-gutters">
             <div class="row">
-                <div class="card-deck">
-                    <div class="card">
-                        <a href="./views/csgo.html"><img src="./img/img-index/csgo.png" class="card-img-top" alt="..."></a>
+                <div class="cards-juegos">
+                    <div class="cards">
+                        <a href=""><img src="./img/img-index/csgo.png" alt="" class="card-img-top"></a>
                     </div>
-                    <div class="card">
-                        <a href="./views/lol.html"><img src="./img/img-index/lol.jpg" class="card-img-top" alt="..."></a>
+                    <div class="cards">
+                        <a href=""><img src="./img/img-index/lol.jpg" alt="" class="card-img-top"></a>
+                    </div>
+                    <div class="cards">
+                        <a href=""><img src="./img/img-index/valorant.jpg" alt="" class="card-img-top"></a>
+                    </div>
+                    <div class="cards">
+                        <a href=""><img src="./img/img-index/fortnite.jpg" alt="" class="card-img-top"></a>
+                    </div>
+                    <div class="cards">
+                        <a href=""><img src="./img/img-index/rocket-league.jpg" alt="" class="card-img-top"></a>
+                    </div>
+                    <div class="cards">
+                        <a href=""><img src="./img/img-index/fifa-21.jpg" alt="" class="card-img-top"></a>
                     </div>
                 </div>
             </div>
