Agregué botones al index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,20 @@
             </div>
         </div>
     </div>
-    
+
+    <!-- Nav -->
+    <div class="container-fluid">
+        <div class="row">
+            <ul class="nav justify-content-end fixed-top">
+                <li class="nav-item">
+                    <button class="btn btn-primary" type="submit">Login</button>
+                </li>
+                <li class="nav-item">
+                    <button type="button" class="btn btn-outline-primary">Sign up</button>
+                </li>
+            </ul>
+        </div>
+    </div>
     <!-- Selecciona un juego -->
         <div class="container-fluid no-gutters">
             <div class="row titulo-index">
